--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,10 +20,11 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^1.7.4",
     "@paralleldrive/cuid2": "^2.2.2",
     "@repo/ui": "workspace:*",
     "@t3-oss/env-nextjs": "^0.10.1",
-    "@tanstack/react-query": "^5.61.5",
+    "@tanstack/react-query": "^5.62.0",
     "@trpc/client": "11.0.0-rc.648",
     "@trpc/react-query": "11.0.0-rc.648",
     "@trpc/server": "11.0.0-rc.648",
@@ -33,6 +34,7 @@
     "geist": "^1.3.1",
     "lucide-react": "^0.462.0",
     "next": "^15.0.3",
+    "next-auth": "5.0.0-beta.25",
     "postgres": "^3.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -47,13 +49,13 @@
     "@repo/tailwind-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/eslint": "^8.56.12",
-    "@types/node": "^20.17.8",
+    "@types/node": "^20.17.9",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^8.16.0",
     "@typescript-eslint/parser": "^8.16.0",
     "drizzle-kit": "^0.24.2",
-    "eslint": "^8.57.1",
+    "eslint": "^9.16.0",
     "eslint-config-next": "^15.0.3",
     "eslint-plugin-drizzle": "^0.2.3",
     "postcss": "^8.4.49",
