--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "private": true,
   "exports": {
-    "./input": "./src/components/input.tsx"
+    "./input": "./src/components/input.tsx",
+    "./button": "./src/components/button.tsx"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
@@ -12,15 +13,16 @@
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
     "@repo/tailwind-config": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "@turbo/gen": "^1.13.4",
-    "@types/node": "^20.17.8",
+    "@types/node": "^20.17.9",
     "@types/react": "18.3.0",
     "@types/react-dom": "18.3.1",
     "typescript": "5.5.4"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.462.0",
