--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,13 +10,13 @@
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
-    "dev": "next dev --turbo",
+    "dev": "node server.js",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "preview": "next build && next start",
-    "start": "next start",
+    "start": "NODE_ENV=production node server.js",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -24,7 +24,7 @@
     "@paralleldrive/cuid2": "^2.2.2",
     "@repo/ui": "workspace:*",
     "@t3-oss/env-nextjs": "^0.10.1",
-    "@tanstack/react-query": "^5.62.0",
+    "@tanstack/react-query": "^5.62.3",
     "@trpc/client": "11.0.0-rc.648",
     "@trpc/react-query": "11.0.0-rc.648",
     "@trpc/server": "11.0.0-rc.648",
@@ -33,16 +33,18 @@
     "drizzle-orm": "^0.33.0",
     "geist": "^1.3.1",
     "lucide-react": "^0.462.0",
-    "next": "^15.0.3",
+    "next": "^15.0.4",
     "next-auth": "5.0.0-beta.25",
     "postgres": "^3.4.5",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "server-only": "^0.0.1",
-    "superjson": "^2.2.1",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
+    "superjson": "^2.2.2",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "zod": "^3.24.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
@@ -50,18 +52,20 @@
     "@repo/typescript-config": "workspace:*",
     "@types/eslint": "^8.56.12",
     "@types/node": "^20.17.9",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@typescript-eslint/eslint-plugin": "^8.16.0",
-    "@typescript-eslint/parser": "^8.16.0",
+    "@types/react": "^18.3.14",
+    "@types/react-dom": "^18.3.3",
+    "@types/ws": "^8.5.13",
+    "@typescript-eslint/eslint-plugin": "^8.18.0",
+    "@typescript-eslint/parser": "^8.18.0",
     "drizzle-kit": "^0.24.2",
     "eslint": "^9.16.0",
-    "eslint-config-next": "^15.0.3",
+    "eslint-config-next": "^15.0.4",
     "eslint-plugin-drizzle": "^0.2.3",
+    "next-ws-cli": "^1.1.5",
     "postcss": "^8.4.49",
-    "prettier": "^3.4.1",
+    "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
-    "tailwindcss": "^3.4.15",
+    "tailwindcss": "^3.4.16",
     "typescript": "^5.7.2"
   },
   "ct3aMetadata": {
