Implemented more basic UI

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,8 +4,9 @@
   "type": "module",
   "private": true,
   "exports": {
-    "./input": "./src/components/input.tsx",
-    "./button": "./src/components/button.tsx"
+    "./avatar": "./src/components/avatar.tsx",
+    "./button": "./src/components/button.tsx",
+    "./input": "./src/components/input.tsx"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
@@ -22,6 +23,7 @@
     "typescript": "5.5.4"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
