--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.7.4",
+    "@formatjs/intl-localematcher": "^0.5.9",
     "@paralleldrive/cuid2": "^2.2.2",
     "@repo/ui": "workspace:*",
     "@t3-oss/env-nextjs": "^0.10.1",
@@ -33,6 +34,7 @@
     "drizzle-orm": "^0.33.0",
     "geist": "^1.3.1",
     "lucide-react": "^0.462.0",
+    "negotiator": "^1.0.0",
     "next": "^15.1.2",
     "next-auth": "5.0.0-beta.25",
     "postgres": "^3.4.5",
@@ -51,6 +53,7 @@
     "@repo/tailwind-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/eslint": "^8.56.12",
+    "@types/negotiator": "^0.6.3",
     "@types/node": "^20.17.10",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
