--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,7 +6,8 @@
   "exports": {
     "./avatar": "./src/components/avatar.tsx",
     "./button": "./src/components/button.tsx",
-    "./input": "./src/components/input.tsx"
+    "./input": "./src/components/input.tsx",
+    "./select": "./src/components/select.tsx"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
@@ -24,6 +25,7 @@
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
