--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -7,6 +7,7 @@
     "./avatar": "./src/components/avatar.tsx",
     "./button": "./src/components/button.tsx",
     "./input": "./src/components/input.tsx",
+    "./menubar": "./src/components/menubar.tsx",
     "./select": "./src/components/select.tsx"
   },
   "scripts": {
@@ -25,6 +26,7 @@
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-menubar": "^1.1.4",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "class-variance-authority": "^0.7.1",
