update configs for react 19 types

--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -3,12 +3,13 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./src/*"]
+      "~/*": ["./src/*"],
+      "react": ["./node_modules/@types/react"],
+      "react-dom": ["./node_modules/@types/react-dom"]
     },
-    "noEmit": true
   },
   "include": [
-    "src",
+    ".",
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
 }
