--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,18 +24,18 @@
     "@formatjs/intl-localematcher": "^0.5.9",
     "@paralleldrive/cuid2": "^2.2.2",
     "@repo/ui": "workspace:*",
-    "@t3-oss/env-nextjs": "^0.10.1",
-    "@tanstack/react-query": "^5.62.8",
+    "@t3-oss/env-nextjs": "^0.11.1",
+    "@tanstack/react-query": "^5.62.10",
     "@trpc/client": "11.0.0-rc.648",
     "@trpc/react-query": "11.0.0-rc.648",
     "@trpc/server": "11.0.0-rc.648",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "drizzle-orm": "^0.33.0",
+    "drizzle-orm": "^0.38.3",
     "geist": "^1.3.1",
-    "lucide-react": "^0.462.0",
+    "lucide-react": "^0.469.0",
     "negotiator": "^1.0.0",
-    "next": "^15.1.2",
+    "next": "^15.1.3",
     "next-auth": "5.0.0-beta.25",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
@@ -44,7 +44,7 @@
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "superjson": "^2.2.2",
-    "tailwind-merge": "^2.5.5",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
   },
@@ -52,17 +52,18 @@
     "@repo/eslint-config": "workspace:*",
     "@repo/tailwind-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@types/eslint": "^8.56.12",
+    "@types/eslint": "^9.6.1",
     "@types/negotiator": "^0.6.3",
-    "@types/node": "^20.17.10",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
+    "@types/node": "^22.10.2",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "@types/ws": "^8.5.13",
-    "@typescript-eslint/eslint-plugin": "^8.18.1",
-    "@typescript-eslint/parser": "^8.18.1",
-    "drizzle-kit": "^0.24.2",
+    "@typescript-eslint/eslint-plugin": "^8.18.2",
+    "@typescript-eslint/parser": "^8.18.2",
+    "drizzle-kit": "^0.30.1",
+    "drizzle-seed": "^0.2.1",
     "eslint": "^9.17.0",
-    "eslint-config-next": "^15.1.2",
+    "eslint-config-next": "^15.1.3",
     "eslint-plugin-drizzle": "^0.2.3",
     "next-ws-cli": "^1.1.5",
     "postcss": "^8.4.49",
