--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.7.4",
+    "@aws-sdk/client-s3": "^3.723.0",
     "@formatjs/intl-localematcher": "^0.5.9",
     "@paralleldrive/cuid2": "^2.2.2",
     "@repo/ui": "workspace:*",
@@ -29,6 +30,7 @@
     "@trpc/client": "11.0.0-rc.648",
     "@trpc/react-query": "11.0.0-rc.648",
     "@trpc/server": "11.0.0-rc.648",
+    "better-upload": "^0.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.38.3",
