--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -20,3 +20,5 @@ GOOGLE_CLIENT_SECRET=""
 # AWS
 AWS_ACCESS_KEY_ID=""
 AWS_SECRET_ACCESS_KEY=""
+NEXT_PUBLIC_AWS_BUCKET_NAME=""
+NEXT_PUBLIC_AWS_OBJECT_PREFIX=""
