--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,7 +6,9 @@
   "exports": {
     "./avatar": "./src/components/avatar.tsx",
     "./button": "./src/components/button.tsx",
+    "./form": "./src/components/form.tsx",
     "./input": "./src/components/input.tsx",
+    "./label": "./src/components/label.tsx",
     "./menubar": "./src/components/menubar.tsx",
     "./select": "./src/components/select.tsx"
   },
@@ -25,7 +27,9 @@
     "typescript": "5.5.4"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-menubar": "^1.1.4",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
@@ -34,8 +38,10 @@
     "lucide-react": "^0.462.0",
     "react": "19.0.0-rc-5c56b873-20241107",
     "react-dom": "19.0.0-rc-5c56b873-20241107",
+    "react-hook-form": "^7.54.2",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.17",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.1"
   }
 }
