--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,12 +21,13 @@
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.7.4",
-    "@aws-sdk/client-s3": "^3.723.0",
-    "@formatjs/intl-localematcher": "^0.5.9",
+    "@aws-sdk/client-s3": "^3.726.0",
+    "@formatjs/intl-localematcher": "^0.5.10",
+    "@hookform/resolvers": "^3.10.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "@repo/ui": "workspace:*",
     "@t3-oss/env-nextjs": "^0.11.1",
-    "@tanstack/react-query": "^5.62.10",
+    "@tanstack/react-query": "^5.63.0",
     "@trpc/client": "11.0.0-rc.648",
     "@trpc/react-query": "11.0.0-rc.648",
     "@trpc/server": "11.0.0-rc.648",
@@ -34,14 +35,16 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.38.3",
+    "drizzle-zod": "^0.6.1",
     "geist": "^1.3.1",
     "lucide-react": "^0.469.0",
     "negotiator": "^1.0.0",
-    "next": "^15.1.3",
+    "next": "^15.1.4",
     "next-auth": "5.0.0-beta.25",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-type-animation": "^3.2.0",
     "server-only": "^0.0.1",
     "socket.io": "^4.8.1",
@@ -57,23 +60,23 @@
     "@repo/typescript-config": "workspace:*",
     "@types/eslint": "^9.6.1",
     "@types/negotiator": "^0.6.3",
-    "@types/node": "^22.10.2",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
+    "@types/node": "^22.10.5",
+    "@types/react": "^19.0.4",
+    "@types/react-dom": "^19.0.2",
     "@types/ws": "^8.5.13",
-    "@typescript-eslint/eslint-plugin": "^8.18.2",
-    "@typescript-eslint/parser": "^8.18.2",
+    "@typescript-eslint/eslint-plugin": "^8.19.1",
+    "@typescript-eslint/parser": "^8.19.1",
     "drizzle-kit": "^0.30.1",
-    "drizzle-seed": "^0.2.1",
+    "drizzle-seed": "^0.3.0",
     "eslint": "^9.17.0",
-    "eslint-config-next": "^15.1.3",
+    "eslint-config-next": "^15.1.4",
     "eslint-plugin-drizzle": "^0.2.3",
-    "next-ws-cli": "^1.1.5",
+    "next-ws-cli": "^1.1.6",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.3"
   },
   "ct3aMetadata": {
     "initVersion": "7.38.1"
