--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -38,6 +38,7 @@
     "drizzle-zod": "^0.6.1",
     "geist": "^1.3.1",
     "lucide-react": "^0.469.0",
+    "motion": "^11.17.0",
     "negotiator": "^1.0.0",
     "next": "^15.1.4",
     "next-auth": "5.0.0-beta.25",
