--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "turbo": "^2.4.0",
     "typescript": "5.5.4"
   },
+  "packageManager": "pnpm@10.2.0^",
   "engines": {
     "node": ">=18"
   }
