--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "devDependencies": {
     "prettier": "^3.4.2",
     "turbo": "^2.4.0",
-    "typescript": "5.5.4"
+    "typescript": "5.7.3"
   },
-  "packageManager": "pnpm@10.2.0^",
+  "packageManager": "pnpm@10.2.0",
   "engines": {
-    "node": ">=18"
+    "node": ">=20"
   }
 }
