--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -86,11 +86,12 @@
     "postcss": "^8.5.3",
     "prettier": "^3.5.1",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "sass": "^1.85.1",
     "tailwindcss": "^4.0.7",
     "typescript": "^5.7.3"
   },
   "ct3aMetadata": {
     "initVersion": "7.38.1"
   },
-  "packageManager": "pnpm@10.6.1"
+  "packageManager": "pnpm@10.6.3"
 }
