--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -47,13 +47,15 @@
     "lucide-react": "^0.475.0",
     "motion": "^12.4.7",
     "negotiator": "^1.0.0",
-    "next": "^15.1.7",
+    "next": "15.2.2",
     "next-auth": "5.0.0-beta.25",
     "postgres": "^3.4.5",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-markdown": "^10.1.0",
     "react-type-animation": "^3.2.0",
+    "rehype-raw": "^7.0.0",
     "server-only": "^0.0.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
@@ -72,15 +74,15 @@
     "@types/eslint": "^9.6.1",
     "@types/negotiator": "^0.6.3",
     "@types/node": "^22.13.4",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
     "@types/ws": "^8.5.14",
     "@typescript-eslint/eslint-plugin": "^8.24.1",
     "@typescript-eslint/parser": "^8.24.1",
     "drizzle-kit": "^0.30.4",
     "drizzle-seed": "^0.3.1",
     "eslint": "^9.20.1",
-    "eslint-config-next": "^15.1.7",
+    "eslint-config-next": "15.2.2",
     "eslint-plugin-drizzle": "^0.2.3",
     "next-ws-cli": "^1.1.8",
     "postcss": "^8.5.3",
