--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -47,11 +47,11 @@
     "lucide-react": "^0.475.0",
     "motion": "^12.4.7",
     "negotiator": "^1.0.0",
-    "next": "15.2.2",
+    "next": "15.2.4",
     "next-auth": "5.0.0-beta.25",
     "postgres": "^3.4.5",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-hook-form": "^7.54.2",
     "react-markdown": "^10.1.0",
     "react-type-animation": "^3.2.0",
@@ -74,15 +74,15 @@
     "@types/eslint": "^9.6.1",
     "@types/negotiator": "^0.6.3",
     "@types/node": "^22.13.4",
-    "@types/react": "19.0.10",
-    "@types/react-dom": "19.0.4",
+    "@types/react": "19.1.0",
+    "@types/react-dom": "19.1.1",
     "@types/ws": "^8.5.14",
     "@typescript-eslint/eslint-plugin": "^8.24.1",
     "@typescript-eslint/parser": "^8.24.1",
     "drizzle-kit": "^0.30.4",
     "drizzle-seed": "^0.3.1",
     "eslint": "^9.20.1",
-    "eslint-config-next": "15.2.2",
+    "eslint-config-next": "15.2.4",
     "eslint-plugin-drizzle": "^0.2.3",
     "next-ws-cli": "^1.1.8",
     "postcss": "^8.5.3",
@@ -95,5 +95,11 @@
   "ct3aMetadata": {
     "initVersion": "7.38.1"
   },
-  "packageManager": "pnpm@10.6.3"
+  "packageManager": "pnpm@10.6.3",
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.1.0",
+      "@types/react-dom": "19.1.1"
+    }
+  }
 }
