--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -44,6 +44,7 @@
     "drizzle-orm": "^0.39.3",
     "drizzle-zod": "^0.7.0",
     "geist": "^1.3.1",
+    "googleapis": "^148.0.0",
     "lucide-react": "^0.475.0",
     "motion": "^12.4.7",
     "negotiator": "^1.0.0",
@@ -95,11 +96,5 @@
   "ct3aMetadata": {
     "initVersion": "7.38.1"
   },
-  "packageManager": "pnpm@10.6.3",
-  "pnpm": {
-    "overrides": {
-      "@types/react": "19.1.0",
-      "@types/react-dom": "19.1.1"
-    }
-  }
+  "packageManager": "pnpm@10.6.3"
 }
