intermediate commit in the gCalendar implementation

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -17,6 +17,7 @@ AUTH_SECRET=""
 GOOGLE_CLIENT_ID=""
 GOOGLE_CLIENT_SECRET=""
 GOOGLE_API_KEY=""
+GOOGLE_REDIRECT_URI=""
 
 # AWS
 AWS_ACCESS_KEY_ID=""
