--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,6 +6,7 @@
   "exports": {
     "./avatar": "./src/components/avatar.tsx",
     "./button": "./src/components/button.tsx",
+    "./calendar": "./src/components/calendar.tsx",
     "./dialog": "./src/components/dialog.tsx",
     "./form": "./src/components/form.tsx",
     "./input": "./src/components/input.tsx",
@@ -48,8 +49,10 @@
     "@radix-ui/react-toggle-group": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.475.0",
     "react": "19.0.0",
+    "react-day-picker": "8.10.1",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.54.2",
     "tailwind-merge": "^3.0.1",
