--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,40 +20,40 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@auth/drizzle-adapter": "^1.7.4",
-    "@aws-sdk/client-s3": "^3.750.0",
-    "@formatjs/intl-localematcher": "^0.6.0",
-    "@hookform/resolvers": "^4.1.0",
+    "@auth/drizzle-adapter": "^1.8.0",
+    "@aws-sdk/client-s3": "^3.782.0",
+    "@formatjs/intl-localematcher": "^0.6.1",
+    "@hookform/resolvers": "^5.0.1",
     "@paralleldrive/cuid2": "^2.2.2",
     "@repo/ui": "workspace:*",
     "@t3-oss/env-nextjs": "^0.12.0",
-    "@tanstack/react-query": "^5.66.8",
-    "@tiptap/extension-link": "^2.11.5",
-    "@tiptap/extension-placeholder": "^2.11.5",
-    "@tiptap/extension-typography": "^2.11.5",
-    "@tiptap/extension-underline": "^2.11.5",
-    "@tiptap/pm": "^2.11.5",
-    "@tiptap/react": "^2.11.5",
-    "@tiptap/starter-kit": "^2.11.5",
-    "@trpc/client": "11.0.0-rc.648",
-    "@trpc/react-query": "11.0.0-rc.648",
-    "@trpc/server": "11.0.0-rc.648",
-    "better-upload": "^0.1.3",
+    "@tanstack/react-query": "^5.72.0",
+    "@tiptap/extension-link": "^2.11.7",
+    "@tiptap/extension-placeholder": "^2.11.7",
+    "@tiptap/extension-typography": "^2.11.7",
+    "@tiptap/extension-underline": "^2.11.7",
+    "@tiptap/pm": "^2.11.7",
+    "@tiptap/react": "^2.11.7",
+    "@tiptap/starter-kit": "^2.11.7",
+    "@trpc/client": "11.0.2",
+    "@trpc/react-query": "11.0.2",
+    "@trpc/server": "11.0.2",
+    "better-upload": "^0.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "drizzle-orm": "^0.39.3",
-    "drizzle-zod": "^0.7.0",
+    "drizzle-orm": "^0.41.0",
+    "drizzle-zod": "^0.7.1",
     "geist": "^1.3.1",
     "googleapis": "^148.0.0",
-    "lucide-react": "^0.475.0",
-    "motion": "^12.4.7",
+    "lucide-react": "^0.487.0",
+    "motion": "^12.6.3",
     "negotiator": "^1.0.0",
     "next": "15.2.4",
     "next-auth": "5.0.0-beta.25",
     "postgres": "^3.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-hook-form": "^7.54.2",
+    "react-hook-form": "^7.55.0",
     "react-markdown": "^10.1.0",
     "react-type-animation": "^3.2.0",
     "rehype-raw": "^7.0.0",
@@ -61,7 +61,7 @@
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "superjson": "^2.2.2",
-    "tailwind-merge": "^3.0.1",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
@@ -70,31 +70,29 @@
     "@repo/eslint-config": "workspace:*",
     "@repo/tailwind-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@tailwindcss/postcss": "^4.0.7",
+    "@tailwindcss/postcss": "^4.1.3",
     "@tailwindcss/typography": "^0.5.16",
     "@types/eslint": "^9.6.1",
     "@types/negotiator": "^0.6.3",
-    "@types/node": "^22.13.4",
+    "@types/node": "^22.14.0",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
-    "@types/ws": "^8.5.14",
-    "@typescript-eslint/eslint-plugin": "^8.24.1",
-    "@typescript-eslint/parser": "^8.24.1",
-    "drizzle-kit": "^0.30.4",
+    "@types/ws": "^8.18.1",
+    "@typescript-eslint/eslint-plugin": "^8.29.1",
+    "@typescript-eslint/parser": "^8.29.1",
+    "drizzle-kit": "^0.30.6",
     "drizzle-seed": "^0.3.1",
-    "eslint": "^9.20.1",
+    "eslint": "^9.24.0",
     "eslint-config-next": "15.2.4",
     "eslint-plugin-drizzle": "^0.2.3",
-    "next-ws-cli": "^1.1.8",
     "postcss": "^8.5.3",
-    "prettier": "^3.5.1",
+    "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "sass": "^1.85.1",
-    "tailwindcss": "^4.0.7",
-    "typescript": "^5.7.3"
+    "sass": "^1.86.3",
+    "tailwindcss": "^4.1.3",
+    "typescript": "^5.8.3"
   },
   "ct3aMetadata": {
     "initVersion": "7.38.1"
-  },
-  "packageManager": "pnpm@10.6.3"
+  }
 }
