--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,22 +4,7 @@
   "type": "module",
   "private": true,
   "exports": {
-    "./avatar": "./src/components/avatar.tsx",
-    "./button": "./src/components/button.tsx",
-    "./calendar": "./src/components/calendar.tsx",
-    "./date-picker": "./src/components/date-picker.tsx",
-    "./dialog": "./src/components/dialog.tsx",
-    "./form": "./src/components/form.tsx",
-    "./input": "./src/components/input.tsx",
-    "./label": "./src/components/label.tsx",
-    "./menubar": "./src/components/menubar.tsx",
-    "./popover": "./src/components/popover.tsx",
-    "./select": "./src/components/select.tsx",
-    "./switch": "./src/components/switch.tsx",
-    "./tabs": "./src/components/tabs.tsx",
-    "./textarea": "./src/components/textarea.tsx",
-    "./toggle": "./src/components/toggle.tsx",
-    "./toggle-group": "./src/components/toggle-group.tsx"
+    "./*": "./src/components/*.tsx"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
@@ -40,6 +25,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-hover-card": "^1.1.7",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-menubar": "^1.1.6",
     "@radix-ui/react-popover": "^1.1.6",
