--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,6 +26,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@paralleldrive/cuid2": "^2.2.2",
     "@repo/ui": "workspace:*",
+    "@socket.io/admin-ui": "^0.5.1",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.72.0",
     "@tiptap/extension-link": "^2.11.7",
