--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -42,6 +42,7 @@
     "better-upload": "^0.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cryptr": "^6.3.0",
     "drizzle-orm": "^0.41.0",
     "drizzle-zod": "^0.7.1",
     "geist": "^1.3.1",
