--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,15 +20,15 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@auth/drizzle-adapter": "^1.8.0",
-    "@aws-sdk/client-s3": "^3.782.0",
+    "@auth/drizzle-adapter": "^1.9.0",
+    "@aws-sdk/client-s3": "^3.797.0",
     "@formatjs/intl-localematcher": "^0.6.1",
     "@hookform/resolvers": "^5.0.1",
     "@paralleldrive/cuid2": "^2.2.2",
     "@repo/ui": "workspace:*",
     "@socket.io/admin-ui": "^0.5.1",
-    "@t3-oss/env-nextjs": "^0.12.0",
-    "@tanstack/react-query": "^5.72.0",
+    "@t3-oss/env-nextjs": "^0.13.0",
+    "@tanstack/react-query": "^5.74.4",
     "@tiptap/extension-link": "^2.11.7",
     "@tiptap/extension-placeholder": "^2.11.7",
     "@tiptap/extension-typography": "^2.11.7",
@@ -36,26 +36,27 @@
     "@tiptap/pm": "^2.11.7",
     "@tiptap/react": "^2.11.7",
     "@tiptap/starter-kit": "^2.11.7",
-    "@trpc/client": "11.0.2",
-    "@trpc/react-query": "11.0.2",
-    "@trpc/server": "11.0.2",
+    "@trpc/client": "11.1.1",
+    "@trpc/react-query": "11.1.1",
+    "@trpc/server": "11.1.1",
+    "@zip.js/zip.js": "^2.7.60",
     "better-upload": "^0.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cryptr": "^6.3.0",
-    "drizzle-orm": "^0.41.0",
+    "drizzle-orm": "^0.43.1",
     "drizzle-zod": "^0.7.1",
     "geist": "^1.3.1",
     "googleapis": "^148.0.0",
-    "lucide-react": "^0.487.0",
-    "motion": "^12.6.3",
+    "lucide-react": "^0.503.0",
+    "motion": "^12.9.2",
     "negotiator": "^1.0.0",
     "next": "15.3.1",
     "next-auth": "5.0.0-beta.25",
     "postgres": "^3.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-hook-form": "^7.55.0",
+    "react-hook-form": "^7.56.1",
     "react-markdown": "^10.1.0",
     "react-type-animation": "^3.2.0",
     "rehype-raw": "^7.0.0",
@@ -65,33 +66,33 @@
     "superjson": "^2.2.2",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2",
+    "zod": "^3.24.3",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/tailwind-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@tailwindcss/postcss": "^4.1.3",
+    "@tailwindcss/postcss": "^4.1.4",
     "@tailwindcss/typography": "^0.5.16",
     "@types/eslint": "^9.6.1",
     "@types/negotiator": "^0.6.3",
-    "@types/node": "^22.14.0",
+    "@types/node": "^22.15.2",
     "@types/react": "19.1.2",
     "@types/react-dom": "19.1.2",
     "@types/ws": "^8.18.1",
-    "@typescript-eslint/eslint-plugin": "^8.29.1",
-    "@typescript-eslint/parser": "^8.29.1",
-    "drizzle-kit": "^0.30.6",
+    "@typescript-eslint/eslint-plugin": "^8.31.0",
+    "@typescript-eslint/parser": "^8.31.0",
+    "drizzle-kit": "^0.31.0",
     "drizzle-seed": "^0.3.1",
-    "eslint": "^9.24.0",
+    "eslint": "^9.25.1",
     "eslint-config-next": "15.3.1",
     "eslint-plugin-drizzle": "^0.2.3",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "sass": "^1.86.3",
-    "tailwindcss": "^4.1.3",
+    "sass": "^1.87.0",
+    "tailwindcss": "^4.1.4",
     "typescript": "^5.8.3"
   },
   "ct3aMetadata": {
