--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,8 +1,12 @@
 {
   "name": "web",
-  "version": "0.1.0",
+  "version": "0.4.0-beta.0",
   "private": true,
   "type": "module",
+  "author": {
+    "name": "LudusXR ApS",
+    "email": "ari@mistclick.me"
+  },
   "scripts": {
     "build": "pnpm db:migrate&&next build",
     "check": "next lint && tsc --noEmit",
