--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "packageManager": "pnpm@10.12.1",
   "engines": {
     "node": ">=20"
+  },
+  "author": {
+    "name": "LudusXR ApS",
+    "email": "ari@mistclick.me"
   }
 }
